IMPLEMENTED GEN AI FOR SUMMARY!!!!!