@@ -4,6 +4,7 @@ import com.Verity.DTO.CommentDTO;
 import com.Verity.Entity.PostEntity;
 import com.Verity.Repo.PostRepo;
 import com.google.common.collect.ImmutableList;
+import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Value;
 import com.google.genai.Client;
 import com.google.genai.types.*;
@@ -21,6 +22,14 @@ public class AIService {
     @Value("${gemini.api.key}")
     private String apiKey;
 
+    private Client client;
+
+    // Initialize the client once so you don't rebuild it 100 times
+    @PostConstruct
+    public void init() {
+        this.client = Client.builder().apiKey(apiKey).build();
+    }
+
     public String generateDebateSummary(String postID) {
         Map<String, CommentDTO> highlights = consensusService.getConsensusHighlights(postID);
         PostEntity post = postRepo.findById(postID)
@@ -29,9 +38,6 @@ public class AIService {
         String proText = highlights.get("pros") != null ? highlights.get("pros").getText() : "No arguments.";
         String conText = highlights.get("cons") != null ? highlights.get("cons").getText() : "No arguments.";
 
-        Client client = Client.builder().apiKey(apiKey).build();
-
-        // Prompt for the summary
         String prompt = String.format(
                 "Analyze the debate: %s. Team %s argues: %s. Team %s argues: %s. " +
                         "Provide a concise 3-sentence neutral summary of the main points and any common ground.",
@@ -40,18 +46,20 @@ public class AIService {
 
         try {
             GenerateContentConfig config = GenerateContentConfig.builder()
-                    .thinkingConfig(ThinkingConfig.builder().thinkingLevel("MEDIUM").build())
+                    .temperature(0.7F)
                     .build();
 
             GenerateContentResponse response = client.models.generateContent(
-                    "gemini-2.0-flash",
-                    ImmutableList.of(Content.builder().role("user")
-                            .parts(ImmutableList.of(Part.fromText(prompt))).build()),
+                    "gemini-2.5-flash",
+                    java.util.List.of(Content.builder().role("user")
+                            .parts(java.util.List.of(Part.fromText(prompt))).build()),
                     config
             );
 
             return response.text();
         } catch (Exception e) {
+            // Log the actual error so you can see it in IntelliJ
+            System.err.println("Gemini Error: " + e.getMessage());
             return "The AI is currently reflecting on the debate. Please try again shortly.";
         }
     }
